Thu Mar  3 12:22:30 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Further improvements to this file, thanks to Glenn Zickert
          <gzickert at comcast dot net> for reporting these

Wed Mar  2 20:56:42 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
          Removed some ancient settings.

Wed Mar  2 12:42:58 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
        * ace/config-linux.h:
        * include/makeinclude/platform_linux.GNU:
        * include/makeinclude/platform_linux_common.GNU:
          Simplified setting of ACE_HAS_AIO_CALLS.

Tue Mar  1 11:31:55 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_linux.GNU:
          Fixed setting of CC and CXX variables (conditional assignment
          doesn't work in this case).

Tue Mar  1 07:35:43 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_linux.GNU:
          Added missing SOFLAGS += -pthread.

Mon Feb 28 21:05:59 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-WinCE.h:
        * ace/config-cygwin32.h:
        * ace/config-hpux-11.00.h:
        * ace/config-kfreebsd.h:
        * ace/config-lynxos.h:
        * ace/config-netbsd.h:
        * ace/config-openbsd.h:
        * ace/config-win32-interix.h:
          No need to define ACE_HAS_POSITION_INDEPENDENT_POINTERS since it
          is default setting.

Mon Feb 28 20:29:59 UTC 2011  Steve Huston  <shuston@riverace.com>

        * examples/ASX/Event_Server/Event_Server/Event_Analyzer.cpp:
        * examples/ASX/UPIPE_Event_Server/Event_Analyzer.cpp: Replaced the
          name "mod_name" with "module_name" to avoid a clash with macro
          defined in /usr/include/sys/stropts.h encountered when optimized
          build was done.

Mon Feb 28 18:10:19 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Remove the -qfuncsect